# minecraft-mappings

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
libs/cli/: Cargo.toml  timings.txt
libs/cli/src/: main.rs
libs/core/: Cargo.toml
libs/core/src/: cache.rs  lib.rs  mcp.rs  spigot.rs  utils.rs  version.rs
libs/database/: Cargo.toml  notes.txt
libs/database/src/: lib.rs  main.rs  setup.sql
libs/engine/: Cargo.toml
libs/engine/src/: computer.rs  lib.rs  target.rs
libs/web/: Cargo.toml
libs/web/src/: main.rs
src/: cache.rs  lib.rs  mcp.rs  spigot.rs  utils.rs  version.rs
test_web/: test_api.py
