cargo-features = ["rename-dependency"]

[package]
name = "minecraft-mappings-cli"
description = "The command line interface"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.2"
# Minecraft
mappings = { path = "../core", package = "minecraft-mappings-core" }
engine = { path = "../engine", package = "minecraft-mappings-engine"}
srglib = { path = "../../srglib" }