cargo-features = ["rename-dependency"]

[package]
name = "minecraft-mappings-engine"
description = "Resposnsible for generating the mappign combinations"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
bitflags = "1.0.4"
# Minecraft
mappings = { path = "../core", package = "minecraft-mappings-core" }
srglib = { git = "https://github.com/Techcable/srglib-rust.git" }