cargo-features = ["rename-dependency"]

[package]
name = "minecraft-mappings-web"
description = "My minecraft mappings website"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
indexmap = "1.0.1"
# Rocket
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
# Serialization
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
# Minecraft
mappings = { path = "../core", package = "minecraft-mappings-core" }
engine = { path = "../engine", package = "minecraft-mappings-engine"}
srglib = { path = "../../srglib" }